[package]
name = "map_test"
version = "0.1.0"
authors = ["František Boháček <fandabohacek@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32"] }
embedded-hal = "0.2.7"
nb = "1.1.0"
smart-leds = "0.3.0"
smart-leds-trait = "0.2.1"
fugit = "0.3.7"
libm = "0.2.7"
esp-alloc = "0.3.0"
